--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
 
 			<div id="trial" style='padding:0px; margin:0;border:0px;'>	
 				 <div id="container"></div>
-				 <div id="trial_front" style='text-align:center;font-size:200px;margin-top:200px;'>+</div>
-				 <div id="trial_end" style='text-align:center;font-size:200px;margin-top:200px;'>#</div>
+				 <div id="trial_front" style='text-align:center;font-size:200px;margin-top:350px;'>+</div>
+				 <div id="trial_end" >
+				 	<div id="end_container"></div>
+				</div>
+				 
 			</div>
+			
 
 			<div id="result" style='padding:0px; margin:0;border:0px;text-align:center;padding-top:200px;'>	
 				<div id="result_table"></div>
@@ -36,7 +40,6 @@
 	<script type="text/javascript" src="lib/kinetic-v4.2.0.min.js"></script>
     <script src="test.js"></script>
     <script src="data.js"></script>
-	<script src="client.js"></script>
 	<!--
 	<script src="render.js"></script>
 	<script src="controller.js"></script>
@@ -68,6 +71,37 @@
 			$.browser.version == "8.0") ) {
 		alert('Please use IE9+,Chrome,Firefox,Safari for better HTML5 support');
 	} 
+	</script>
+
+	<script type="text/javascript">
+		// draw
+        var stage = new Kinetic.Stage({
+            container: 'end_container',
+            width: this.STAGE_WIDTH,
+            height: this.STAGE_HEIGHT
+        });
+
+        var layer = new Kinetic.Layer();
+
+
+        var group = new Kinetic.Group({
+            x: x ,
+            y: y ,
+            id: 'end_pic',
+            visible: false
+            });
+
+            // 竖线
+            var rectV = new Kinetic.Rect({
+                x: cur_trial.hline_length/2 - cur_trial.line_width/2,
+                y: 0,
+                width: cur_trial.line_width,
+                height: cur_trial.vline_length,
+                fill: cur_trial.line_color
+            });
+            group.add(rectV);
+
+
 	</script>
 	
 </html>
